--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://superseriouscompany.github.io/stores.shopterra.com",
+  "homepage": "https://stores.shopterra.com",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
