--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.9.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "shopterra-styles": "https://git@github.com:superseriouscompany/shopterra-styles.git"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
